updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am pretty simple. I love dogs, tequila, roadtrips, and learning new things.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Derry, NH</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy time with friends, hiking, and watching movies</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Stay at home dog mom</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Derry, NH</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy learning about computers and want to establish myself in a career that I love.</p>
     </section>
 
     <footer id="footer">
